--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jackson.time-zone=GMT+8
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.config=classpath:logback-spring.xml
