--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=dev
 server.port=8081
+
 server.servlet.context-path=/demo
 spring.thymeleaf.cache=false
 spring.mvc.date-format=yyyy-MM-dd
@@ -10,3 +11,6 @@ spring.jackson.time-zone=GMT+8
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.config=classpath:logback-spring.xml
+logging.path=/opt/data/logs/
