--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 server.port=8081
 
-server.servlet.context-path=/demo
+#server.servlet.context-path=/demo
 spring.thymeleaf.cache=false
 spring.mvc.date-format=yyyy-MM-dd
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
